k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v1
  namespace: week5
  labels:
    app: app-v1
    version: v1.0.0
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-v1
  template:
    metadata:
      labels:
        app: app-v1
        version: v1.0.0
    spec:
      containers:
      - name: app
        image: nginx:1.27-alpine
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
      volumes:
      - name: html
        configMap:
          name: app-v1-html
