k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-v1
  namespace: week5
spec:
  selector:
    app: app-v1
  ports:
  - port: 80
    targetPort: 80
