k8s/canary.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: app-canary
  namespace: week5
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`week5.195-201-121-117.nip.io`)
    kind: Rule
    services:
    - name: app-canary
      kind: TraefikService
  tls: {}
