k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-v1
  namespace: week5
spec:
  ingressClassName: traefik
  rules:
  - host: week5.195-201-121-117.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-v1
            port:
              number: 80
